up database, complete registation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+compose.yml
+
 # compiled output
 /dist
 /node_modules
@@ -37,9 +39,9 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
+.env.development
 .env.test.local
-.env.production.local
+.env.production
 .env.local
 
 # temp directory
