--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.16",
+    "@types/uuid4": "^2.0.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -43,7 +44,9 @@
     "pug": "^3.0.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^11.0.2",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
