--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     depends_on:
-      - app
+      - backend
   backend:
     container_name: backend
     env_file:
@@ -40,20 +40,6 @@ services:
       - ${POSTGRES_PORT}:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
-    restart: always
-  documentation:
-    container_name: documentation
-    env_file:
-      - .production.env
-    build:
-      context: /home/arsen00531/server/connect-birga-docs/.
-    volumes:
-      - /home/arsen00531/server/connect-birga-docs/dist/src/uploads:/app/backend/dist/src/uploads
-      - /app/backend/node_modules
-    ports:
-      - 5060:5000
-      - 9230:9229
-    command: npm run start:prod
     restart: always
 
 volumes:
